--- a/src/components/home/teachers/Teachers.scss
+++ b/src/components/home/teachers/Teachers.scss
@@ -65,7 +65,7 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-57%, -50%);
+  transform: translate(-50%, -50%);
   z-index: 3;
   display: flex;
   li {
@@ -143,7 +143,7 @@
       font-size: 16px;
       line-height: 2;
       color: #333;
-      font-weight: 300;
+      font-weight: 400;
       display: block;
     }
   }
@@ -293,7 +293,7 @@
   .boddy {
     display: block;
     width: 100%;
-    height: 40vh;
+    height: 31vh;
     // height: auto;
   }
 
@@ -301,7 +301,7 @@
     padding: 0 1px;
   }
   .card {
-    width: 100%;
+    width: 95%;
     height: 120px;
 
     &:hover {
@@ -316,7 +316,7 @@
     }
   }
   .social-icons {
-    transform: translate(-64%, -50%);
+    transform: translate(-50%, -50%);
   }
   .social-icons li a {
     width: 22px;
@@ -328,6 +328,16 @@
     //  margin:2px 0;
   }
 
+  .social-icons li a .fab {
+    transition: 0.8s;
+    width: 22px;
+    height: 22px;
+    &:hover {
+      transform: rotateY(360deg);
+      color: #fff;
+    }
+  }
+
   .carousel {
     .slick-dots {
       bottom: -7vw;
@@ -336,19 +346,19 @@
 
   .details {
     width: 100%;
-    height: 72px;
+    height: 78px;
     z-index: 1;
     // padding: 10px;
-    // transition: .6s;
+    transition: 0.6s;
     h2 {
-      font-size: 14px;
+      font-size: 12px;
       margin: 20px 0;
       padding: 0;
       text-align: center;
       .job-title {
         font-size: 11px;
-        line-height: 1.5;
-        color: #333;
+        line-height: 1.1;
+        color: #000;
       }
     }
   }
